--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homesmart</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body
     class="max-w-[2000px] mx-auto text-neutral-900 dark:text-neutral-200 bg-whitedark:bg-netural-800"
